Bug#40123 - Make the upper limit of falcon-serial-log-buffer=1000 Since the minimum value is referenced in a number of places, make a #define SRL_MIN_WINDOWS